fixing bugs with auto follow

--- a/views/awesome_follow.erb
+++ b/views/awesome_follow.erb
@@ -1,6 +1,7 @@
 <div class="container">
 
         <h1>Following request response</h1>
+        <p><a href="https://twitter.com/following" target="_blank">Check in your profile.</a></p>
         <pre>
 <%= @info %>
         </pre>
