--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,8 @@
 <div class="container">
 
     <!-- Main component for a primary marketing message or call to action -->
-        <h1>Sign in with Twitter</h1>
-        <p>Try to access the awesome features.</p>
+        <h1>Sign in with Twitter Sample</h1>
+        <p>Try to access the awesome features. Then Sign in. Then try to access it again.</p>
 
 </div> <!-- /container -->
 
