--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sign In Bootstrap</title>
+    <title>Sign In with Twitter Sample</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Sign In Bootstrap</a>
+          <a class="navbar-brand" href="#">Sign In Sample</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
